# karaoke_bot

./: .gitignore  README.md  bot.py  config.py  karaoke  pyproject.toml  requirements.txt
bot/: main.py
bot/keyboards/: keyboard_factory.py
bot/models/: sqlalchemy_models.py  sqlalchemy_models_without_polymorph.py
bot/repository/: memory_repository.py  mysql_repository.py  sqlalchemy_repository.py  sqlite_repository.py
bot/utils/: download_youtube_track_2.py
bot_old_version/: bot_old_version.py  id-url_08_03_2023.txt  id_url_05_04_2023.txt  random_recomendation.py
data_base/: sqlite_db.py
handlers/: admin.py  client.py  other.py
karaoke_bot/: bot.py  config.py
karaoke_bot/bot_old_version/: Dockerfile_model  bot_old_version.py  id_url_all.csv  id_url_all.txt  id_url_all_parse.py  karaoke_old_version.db  karaoke_old_version_debug.db  links_by_user_id.json  links_by_user_id.txt  random_recomendation.py  recommendations.py  sqlalchemy_orm.py  ud_url_12_04_2023.txt  unique_links_parse.py
karaoke_bot/handlers/: __init__.py  admin.py  client.py  other.py  owner.py  visitor.py
karaoke_bot/karaoke_gram/: karaoke.py  karaoke_user.py  utils.py
karaoke_bot/keyboards/: __init__.py  (+2 more)
karaoke_gram/: karaoke.py
keyboards/: __init__.py  admin_keyboards.py  client_keyboards.py  other_keyboards.py
scripts/: run.py
spectrogram/: any_dataset.py  audio_processing.py  main.py  melspectrogram.py  melspectrogram2.py  spectrogram_multithreading.py  spectrogram_multithreading2.py  spectrogram_multithreading_v2.py  spectrrogram_generator.py
states/: client_states.py
(+76 files in other folders)
