[tool.poetry]
name = "karaoke-bot"
version = "0.1.0"
description = ""
authors = ["petrg <p.grachev@ipavlov.ai>"]
readme = "README.md"
packages = [{include = "karaoke_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.25.1"
yt-dlp = "^2023.3.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest = "^7.2.2"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
